Criando a secção sobre mim

--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
         <img src="images/logo.png" alt="Logo Virgilio">
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Sobre mim</a></li>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">Sobre mim</a></li>
                 <li><a href="#">Serviços</a></li>
                 <li><a href="#">Contacto</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <section>
+        <section id="home">
             <div class="textBox">
                 <h1>Bem vindo! <br><span>Virgilio Designer</span></h1>
                 <p>Olá, bem vindo mais uma vez, está procurando por um Designer Gráfico? Eis o fim da sua procura. <strong>Virgílio Fernando Nhocuane</strong>, ou <strong>VirgílioDesigner</strong> tem como objetivo a satisfação dos clientes proporcionando-os o  melhor design possível, promova o seu produto ou serviço, de uma forma mais atrativa com o <strong>VirgílioDesigner.</strong></p>
@@ -28,6 +28,16 @@
             <div class="imgBox">
                 <img src="images/virgilio01.png" alt="Virgílio photo">
                 <p>Olá, meu nome é Virgílio!</p>
+            </div>
+        </section>
+
+        <section id="about">
+            <div class="imgBox">
+                <img src="images/virgilio02.png" alt="Virgílio photo">
+            </div>
+            <div class="textBox">
+                <p>Profissional de Design Gráfico, Moçambicano, natural de Maputo residente em Mavalane, 18 anos de idade, 3 anos de carreira.</p>
+                <p>Procuro trabalhar em alguns projetos e aumentar o meu potencial, obtendo assim o que sempre quis, mim tornar o <strong>Designer Gráfico Profissional.</strong></p>
             </div>
         </section>
     </main>
