Fazendo alguns ajustes no estilo

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
             </div>
         </section>
 
+        <div class="divider-1"></div>
+
         <section id="about">
             <div class="imgBox">
                 <img src="images/virgilio02.png" alt="Virgílio photo">
