--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                 <img src="images/virgilio02.png" alt="Virgílio photo">
             </div>
             <div class="textBox">
-                <p>Profissional de Design Gráfico, Moçambicano, natural de Maputo residente em Mavalane, 18 anos de idade, 3 anos de carreira.</p>
-                <p>Procuro trabalhar em alguns projetos e aumentar o meu potencial, obtendo assim o que sempre quis, mim tornar o <strong>Designer Gráfico Profissional.</strong></p>
+                <p>Profissional de Design Gráfico, Moçambicano, natural de Maputo residente em Mavalane, 18 anos de idade, 3 anos de carreira. Estudante de Comunicação de Multimedia em Maputo, tendo como maior objetivo proporcionar o melhor do design aos que o contactam como já havia dito, para mais informações contacte-me</p>
+              
             </div>
         </section>
     </main>
