Mudando alguns detalhes

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 
         <section id="about">
             <div class="imgBox">
-                <img src="images/virgilio02.png" alt="Virgílio photo">
+                <img src="images/logo02.png" alt="Virgílio logo">
             </div>
             <div class="textBox">
-                <p>Profissional de Design Gráfico, Moçambicano, natural de Maputo residente em Mavalane, 18 anos de idade, 3 anos de carreira. Estudante de Comunicação de Multimedia em Maputo, tendo como maior objetivo proporcionar o melhor do design aos que o contactam como já havia dito, para mais informações contacte-me</p>
+                <p>Profissional de <strong>Design Gráfico</strong>, Moçambicano, natural de Maputo residente em Mavalane, 18 anos de idade, 3 anos de carreira. Estudante de <strong>Comunicação de Multimedia</strong> em Maputo, tendo como maior objetivo proporcionar o <strong>melhor do design</strong> aos que o contactam como já havia dito, para mais informações contacte-me.</p>
               
             </div>
         </section>
