Terminando os ajustes por hoje

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">Sobre mim</a></li>
-                <li><a href="#">Serviços</a></li>
+                <li><a href="#">Trabalhos</a></li>
                 <li><a href="#">Contacto</a></li>
             </ul>
         </nav>
@@ -39,7 +39,6 @@
             </div>
             <div class="textBox">
                 <p>Profissional de <strong>Design Gráfico</strong>, Moçambicano, natural de Maputo residente em Mavalane, 18 anos de idade, 3 anos de carreira. Estudante de <strong>Comunicação de Multimedia</strong> em Maputo, tendo como maior objetivo proporcionar o <strong>melhor do design</strong> aos que o contactam como já havia dito, para mais informações contacte-me.</p>
-              
             </div>
         </section>
     </main>
