--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">Sobre mim</a></li>
-                <li><a href="#">Trabalhos</a></li>
+                <li><a href="#">Serviços</a></li>
+                <li><a href="#">Projectos</a></li>
                 <li><a href="#">Contacto</a></li>
             </ul>
         </nav>
