--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <header>
-        <img src="images/logo.png" alt="Logo Virgilio">
+    <header id="header">
+        <a href="/index.html"><img src="images/logo.png" alt="Logo Virgilio"></a>
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
@@ -20,6 +20,7 @@
             </ul>
         </nav>
     </header>
+    
     <main>
         <section id="home">
             <div class="textBox">
