--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </ul>
         </nav>
     </header>
-    
+
     <main>
         <section id="home">
             <div class="textBox">
@@ -40,7 +40,7 @@
                 <img src="images/logo02.png" alt="Virgílio logo">
             </div>
             <div class="textBox">
-                <p>Profissional de <strong>Design Gráfico</strong>, Moçambicano, natural de Maputo residente em Mavalane, 18 anos de idade, 3 anos de carreira. Estudante de <strong>Comunicação de Multimedia</strong> em Maputo, tendo como maior objetivo proporcionar o <strong>melhor do design</strong> aos que o contactam como já havia dito, para mais informações contacte-me.</p>
+                <p>Profissional de <strong>Design Gráfico</strong>, Moçambicano, natural de Maputo residente em Mavalane, 18 anos de idade, 3 anos de carreira. Estudante de <strong>Comunicação de Multimedia</strong> em Maputo, tendo como maior objetivo proporcionar o <strong>Melhor do Design</strong> aos que o contactam como já havia dito, para mais informações contacte-me.</p>
             </div>
         </section>
     </main>
