Criando swiper e fazendo alguns ajustes

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Virgílio</title>
     <link rel="stylesheet" href="styles/style.css">
+
+    <!-- SWIPER -->
+    <link rel="stylesheet" href="swiper/swiper-bundle.min.css">
 </head>
 <body>
     <header id="header">
@@ -14,7 +17,7 @@
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">Sobre mim</a></li>
-                <li><a href="#">Serviços</a></li>
+                <li><a href="#services">Serviços</a></li>
                 <li><a href="#">Projectos</a></li>
                 <li><a href="#">Contacto</a></li>
             </ul>
@@ -43,6 +46,37 @@
                 <p>Profissional de <strong>Design Gráfico</strong>, Moçambicano, natural de Maputo residente em Mavalane, 18 anos de idade, 3 anos de carreira. Estudante de <strong>Comunicação de Multimedia</strong> em Maputo, tendo como maior objetivo proporcionar o <strong>Melhor do Design</strong> aos que o contactam como já havia dito, para mais informações contacte-me.</p>
             </div>
         </section>
+
+        <div class="divider-1"></div>
+
+        <section id="services">
+            <nav>
+                <ul>
+                    <li><a href="#">Cartazes</a></li>
+                </ul>
+            </nav>
+            <div class="cartazes">
+                <div class="swiper-container">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide"><img src="images/projetos/cartazes/cartaz01.jpeg" alt=""></div>
+                        <div class="swiper-slide"><img src="images/projetos/cartazes/cartaz02.jpeg" alt=""></div>
+                          
+                        <div class="swiper-slide"><img src="images/projetos/cartazes/cartaz03.jpeg" alt=""></div>
+                        <div class="swiper-slide"><img src="images/projetos/cartazes/cartaz04.jpeg" alt=""></div>
+                        <div class="swiper-slide"><img src="images/projetos/cartazes/cartaz05.jpeg" alt=""></div>
+                        <div class="swiper-slide"><img src="images/projetos/cartazes/cartaz06.jpeg" alt=""></div>
+                        <div class="swiper-slide"><img src="images/projetos/cartazes/cartaz07.jpeg" alt=""></div>
+                        <div class="swiper-slide"><img src="images/projetos/cartazes/cartaz08.jpeg" alt=""></div>
+                        <div class="swiper-slide"><img src="images/projetos/cartazes/cartaz09.jpeg" alt=""></div>
+                        <div class="swiper-slide"><img src="images/projetos/cartazes/cartaz10.jpeg" alt=""></div>
+                        <div class="swiper-slide"><img src="images/projetos/cartazes/cartaz11.jpeg" alt=""></div>
+                        
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
+    <script src="swiper/swiper-bundle.min.js"></script>
+    <script src="scripts/script.js"></script>
 </body>
 </html>
