Ajustando a secção Services

--- a/index.html
+++ b/index.html
@@ -52,10 +52,15 @@
         <section id="services">
             <nav>
                 <ul>
-                    <li><a href="#">Cartazes</a></li>
+                    <li class="active">Cartazes</li>
+                    <li>Cartões de Visita</li>
+                    <li>Cartoons</li>
+                    <li>Logo Marcas</li>
+                    <li>Menus</li>
+                    <li>Outros</li>
                 </ul>
             </nav>
-            <div class="cartazes">
+            <div id="cartazes">
                 <div class="swiper-container">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide"><img src="images/projetos/cartazes/cartaz01.jpeg" alt=""></div>
@@ -70,8 +75,46 @@
                         <div class="swiper-slide"><img src="images/projetos/cartazes/cartaz09.jpeg" alt=""></div>
                         <div class="swiper-slide"><img src="images/projetos/cartazes/cartaz10.jpeg" alt=""></div>
                         <div class="swiper-slide"><img src="images/projetos/cartazes/cartaz11.jpeg" alt=""></div>
-                        
                     </div>
+                    <div class="swiper-pagination"></div>
+                </div>
+            </div>
+            <div id="cartoes" class="hide">
+                <div class="swiper-container">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide"><img src="images/projetos/cartõesdevisita/cartoesdevisita01.jpeg" alt=""></div>
+                    </div>
+                    <div class="swiper-pagination"></div>
+                </div>
+            </div>
+            <div id="cartoons" class="hide">
+                <div class="swiper-container">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide"><img src="images/projetos/cartoons/cartoons01.jpeg" alt=""></div>
+                        <div class="swiper-slide"><img src="images/projetos/cartoons/cartoons02.jpeg" alt=""></div>
+                    </div>
+                    <div class="swiper-pagination"></div>
+                </div>
+            </div>
+            <div id="logomarca" class="hide">
+                <div class="swiper-container">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide"><img src="images/projetos/logomarcas/logomarcas01.jpeg" alt=""></div>
+                        <div class="swiper-slide"><img src="images/projetos/logomarcas/logomarcas02.jpeg" alt=""></div>
+                        <div class="swiper-slide"><img src="images/projetos/logomarcas/logomarcas03.jpeg" alt=""></div>
+                        <div class="swiper-slide"><img src="images/projetos/logomarcas/logomarcas04.jpeg" alt=""></div>
+                        <div class="swiper-slide"><img src="images/projetos/logomarcas/logomarcas05.jpeg" alt=""></div>
+                        <div class="swiper-slide"><img src="images/projetos/logomarcas/logomarcas06.jpeg" alt=""></div>
+                        <div class="swiper-slide"><img src="images/projetos/logomarcas/logomarcas07.jpeg" alt=""></div>
+                        <div class="swiper-slide"><img src="images/projetos/logomarcas/logomarcas08.jpeg" alt=""></div>
+                        <div class="swiper-slide"><img src="images/projetos/logomarcas/logomarcas09.jpeg" alt=""></div>
+                        <div class="swiper-slide"><img src="images/projetos/logomarcas/logomarcas10.jpeg" alt=""></div>
+                        <div class="swiper-slide"><img src="images/projetos/logomarcas/logomarcas11.jpeg" alt=""></div>
+                        <div class="swiper-slide"><img src="images/projetos/logomarcas/logomarcas12.jpeg" alt=""></div>
+                        <div class="swiper-slide"><img src="images/projetos/logomarcas/logomarcas13.jpeg" alt=""></div>
+                    </div>
+                    <div class="swiper-pagination"></div>
+
                 </div>
             </div>
         </section>
