Recriando o design - design não terminado

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <section id="services">
             <nav>
                 <ul>
-                    <li class="active">Cartazes</li>
+                    <li class="active" onclick="secCartazes()">Cartazes</li>
                     <li>Cartões de Visita</li>
                     <li>Cartoons</li>
                     <li>Logo Marcas</li>
@@ -60,12 +60,12 @@
                     <li>Outros</li>
                 </ul>
             </nav>
-            <div id="cartazes">
+            <div class="content">
                 <div class="swiper-container">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide"><img src="images/projetos/cartazes/cartaz01.jpeg" alt=""></div>
                         <div class="swiper-slide"><img src="images/projetos/cartazes/cartaz02.jpeg" alt=""></div>
-                          
+        
                         <div class="swiper-slide"><img src="images/projetos/cartazes/cartaz03.jpeg" alt=""></div>
                         <div class="swiper-slide"><img src="images/projetos/cartazes/cartaz04.jpeg" alt=""></div>
                         <div class="swiper-slide"><img src="images/projetos/cartazes/cartaz05.jpeg" alt=""></div>
@@ -75,30 +75,12 @@
                         <div class="swiper-slide"><img src="images/projetos/cartazes/cartaz09.jpeg" alt=""></div>
                         <div class="swiper-slide"><img src="images/projetos/cartazes/cartaz10.jpeg" alt=""></div>
                         <div class="swiper-slide"><img src="images/projetos/cartazes/cartaz11.jpeg" alt=""></div>
-                    </div>
-                    <div class="swiper-pagination"></div>
-                </div>
-            </div>
-            <div id="cartoes" class="hide">
-                <div class="swiper-container">
-                    <div class="swiper-wrapper">
+
                         <div class="swiper-slide"><img src="images/projetos/cartõesdevisita/cartoesdevisita01.jpeg" alt=""></div>
-                    </div>
-                    <div class="swiper-pagination"></div>
-                </div>
-            </div>
-            <div id="cartoons" class="hide">
-                <div class="swiper-container">
-                    <div class="swiper-wrapper">
+
                         <div class="swiper-slide"><img src="images/projetos/cartoons/cartoons01.jpeg" alt=""></div>
                         <div class="swiper-slide"><img src="images/projetos/cartoons/cartoons02.jpeg" alt=""></div>
-                    </div>
-                    <div class="swiper-pagination"></div>
-                </div>
-            </div>
-            <div id="logomarca" class="hide">
-                <div class="swiper-container">
-                    <div class="swiper-wrapper">
+
                         <div class="swiper-slide"><img src="images/projetos/logomarcas/logomarcas01.jpeg" alt=""></div>
                         <div class="swiper-slide"><img src="images/projetos/logomarcas/logomarcas02.jpeg" alt=""></div>
                         <div class="swiper-slide"><img src="images/projetos/logomarcas/logomarcas03.jpeg" alt=""></div>
@@ -112,9 +94,19 @@
                         <div class="swiper-slide"><img src="images/projetos/logomarcas/logomarcas11.jpeg" alt=""></div>
                         <div class="swiper-slide"><img src="images/projetos/logomarcas/logomarcas12.jpeg" alt=""></div>
                         <div class="swiper-slide"><img src="images/projetos/logomarcas/logomarcas13.jpeg" alt=""></div>
+
+                        <div class="swiper-slide" id="menus"><img src="images/projetos/menus/menu01.jpeg" alt=""></div>
+
+                        <div class="swiper-slide"><img src="images/projetos/outros/outro01.jpeg" alt=""></div>
+                        <div class="swiper-slide"><img src="images/projetos/outros/outro02.jpeg" alt=""></div>
+                        <div class="swiper-slide"><img src="images/projetos/outros/outro03.jpeg" alt=""></div>
+                        <div class="swiper-slide"><img src="images/projetos/outros/outro04.jpeg" alt=""></div>
+                        <div class="swiper-slide"><img src="images/projetos/outros/outro05.jpeg" alt=""></div>
+                        <div class="swiper-slide"><img src="images/projetos/outros/outro06.jpeg" alt=""></div>
+                        <div class="swiper-slide"><img src="images/projetos/outros/outro07.jpeg" alt=""></div>
+                        <div class="swiper-slide"><img src="images/projetos/outros/outro08.jpeg" alt=""></div>
                     </div>
                     <div class="swiper-pagination"></div>
-
                 </div>
             </div>
         </section>
