--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 
     <!-- SWIPER -->
     <link rel="stylesheet" href="swiper/swiper-bundle.min.css">
+
+    <!-- ICONES -->
+    <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
     <header id="header">
@@ -18,8 +21,7 @@
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">Sobre mim</a></li>
                 <li><a href="#services">Serviços</a></li>
-                <li><a href="#">Projectos</a></li>
-                <li><a href="#">Contacto</a></li>
+                <li><a href="#contact">Contacto</a></li>
             </ul>
         </nav>
     </header>
@@ -47,19 +49,10 @@
             </div>
         </section>
 
-        <div class="divider-1"></div>
+        <div class="divider-2"></div>
 
         <section id="services">
-            <nav>
-                <ul>
-                    <li class="active" onclick="secCartazes()">Cartazes</li>
-                    <li>Cartões de Visita</li>
-                    <li>Cartoons</li>
-                    <li>Logo Marcas</li>
-                    <li>Menus</li>
-                    <li>Outros</li>
-                </ul>
-            </nav>
+            <p>Faço Cartazes, <strong>Menus, Cartões de Visita, Logo Marcas e outros Serviços!</strong></p>
             <div class="content">
                 <div class="swiper-container">
                     <div class="swiper-wrapper">
@@ -108,6 +101,26 @@
                     </div>
                     <div class="swiper-pagination"></div>
                 </div>
+            </div>
+        </section>
+
+        <div class="divider-1"></div>
+
+        <section id="contact">
+            <div class="textBox">
+                <h1>Para mais <strong>informações</strong> contacte-me!</h1>
+            </div>
+            <div class="social-media">
+                <a href="https://api.whatsapp.com/send?phone=+258 843770051&text=Oi!%20Gostaria%20de%20encomendar%20um%20trabalho." target="_blank" rel="external"><i class="icon-whatsapp"></i></a>
+                <a href="https://www.instagram.com/virgiliodesigner258" target="_blank" rel="external"><i class="icon-instagram"></i></a>
+                <a href="https://www.facebook.com/virgiliofernando.nhocuane" target="_blank" rel="external"><i class="icon-facebook"></i></a>
+            </div>
+            <div class="others">
+                <ul>
+                    <li><i class="icon-mail"> virgilionhocuane@gmail.com</i></li>
+                    <li><i class="icon-map-pin"></i> Mavalane A, Maputo</li>
+                    <li><i class="icon-phone"> +258 84 377 0051</i></li>
+                </ul>
             </div>
         </section>
     </main>
