--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="/index.html"><img src="images/logo.png" alt="Logo Virgilio"></a>
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
+                <li><a href="#home" class="active">Home</a></li>
                 <li><a href="#about">Sobre mim</a></li>
                 <li><a href="#services">Serviços</a></li>
                 <li><a href="#contact">Contacto</a></li>
